--- a/boards/shields/slimkeeb/slimkeeb.dtsi
+++ b/boards/shields/slimkeeb/slimkeeb.dtsi
@@ -29,73 +29,72 @@
         >;
     };
 
-    layouts {
+layouts {
         compatible = "zmk,physical-layout-list";
 
         physical_layout0: physical_layout_0 {
             compatible = "zmk,physical-layout";
-            display-name = "Corne 36 (Correct Scale)";
+            display-name = "SlimPie36";
             transform = <&default_transform>;
             
-            /* * [수정됨] 단위: 100 = 1u (centi-keyunit)
-             * 이전 코드의 1/19 크기로 정상화했습니다.
-             * 키 크기: 100x100 (1u)
-             * 코르네 특유의 높낮이(Column Stagger) 적용
+            /* * 좌표 기준 (단위: 1/100 키캡 크기, 보통 100 = 1u = 19.05mm)
+             * 중앙(Middle) 손가락을 Y=0 기준으로 잡고 스태거 적용
              */
             keys = 
                 /* --- Left Hand (Top Row) --- */
-                /* X    Y   W   H   rot rx ry */
-                <&key_physical_attrs   0   50  100 100  0  0  0>, /* Pinky */
-                <&key_physical_attrs 100   12  100 100  0  0  0>, /* Ring */
-                <&key_physical_attrs 200    0  100 100  0  0  0>, /* Middle (Highest) */
-                <&key_physical_attrs 300   12  100 100  0  0  0>, /* Index */
-                <&key_physical_attrs 400   12  100 100  0  0  0>, /* Inner */
+                /* X    Y    W    H    rx ry rz */
+                <&key_physical_attrs      0   30  100  100    0  0  0>, /* Pinky (조금 올림) */
+                <&key_physical_attrs    100   10  100  100    0  0  0>, /* Ring */
+                <&key_physical_attrs    200    0  100  100    0  0  0>, /* Middle (기준점) */
+                <&key_physical_attrs    300   15  100  100    0  0  0>, /* Index */
+                <&key_physical_attrs    400   15  100  100    0  0  0>, /* Inner */
 
                 /* --- Right Hand (Top Row) --- */
-                /* Gap: 2u (X좌표 600부터 시작) */
-                <&key_physical_attrs 600   12  100 100  0  0  0>,
-                <&key_physical_attrs 700   12  100 100  0  0  0>,
-                <&key_physical_attrs 800    0  100 100  0  0  0>,
-                <&key_physical_attrs 900   12  100 100  0  0  0>,
-                <&key_physical_attrs 1000  50  100 100  0  0  0>,
+                /* Gap: 2u (X좌표 600부터 시작, 좌우 대칭) */
+                <&key_physical_attrs    600   15  100  100    0  0  0>,
+                <&key_physical_attrs    700   15  100  100    0  0  0>,
+                <&key_physical_attrs    800    0  100  100    0  0  0>,
+                <&key_physical_attrs    900   10  100  100    0  0  0>,
+                <&key_physical_attrs   1000   30  100  100    0  0  0>,
 
-                /* --- Left Hand (Middle Row) --- */
-                <&key_physical_attrs   0  150  100 100  0  0  0>,
-                <&key_physical_attrs 100  112  100 100  0  0  0>,
-                <&key_physical_attrs 200  100  100 100  0  0  0>,
-                <&key_physical_attrs 300  112  100 100  0  0  0>,
-                <&key_physical_attrs 400  112  100 100  0  0  0>,
+                /* --- Left Hand (Middle Row) - Y +100 --- */
+                <&key_physical_attrs      0  130  100  100    0  0  0>,
+                <&key_physical_attrs    100  110  100  100    0  0  0>,
+                <&key_physical_attrs    200  100  100  100    0  0  0>,
+                <&key_physical_attrs    300  115  100  100    0  0  0>,
+                <&key_physical_attrs    400  115  100  100    0  0  0>,
 
                 /* --- Right Hand (Middle Row) --- */
-                <&key_physical_attrs 600  112  100 100  0  0  0>,
-                <&key_physical_attrs 700  112  100 100  0  0  0>,
-                <&key_physical_attrs 800  100  100 100  0  0  0>,
-                <&key_physical_attrs 900  112  100 100  0  0  0>,
-                <&key_physical_attrs 1000 150  100 100  0  0  0>,
+                <&key_physical_attrs    600  115  100  100    0  0  0>,
+                <&key_physical_attrs    700  115  100  100    0  0  0>,
+                <&key_physical_attrs    800  100  100  100    0  0  0>,
+                <&key_physical_attrs    900  110  100  100    0  0  0>,
+                <&key_physical_attrs   1000  130  100  100    0  0  0>,
 
-                /* --- Left Hand (Bottom Row) --- */
-                <&key_physical_attrs   0  250  100 100  0  0  0>,
-                <&key_physical_attrs 100  212  100 100  0  0  0>,
-                <&key_physical_attrs 200  200  100 100  0  0  0>,
-                <&key_physical_attrs 300  212  100 100  0  0  0>,
-                <&key_physical_attrs 400  212  100 100  0  0  0>,
+                /* --- Left Hand (Bottom Row) - Y +200 --- */
+                <&key_physical_attrs      0  230  100  100    0  0  0>,
+                <&key_physical_attrs    100  210  100  100    0  0  0>,
+                <&key_physical_attrs    200  200  100  100    0  0  0>,
+                <&key_physical_attrs    300  215  100  100    0  0  0>,
+                <&key_physical_attrs    400  215  100  100    0  0  0>,
 
                 /* --- Right Hand (Bottom Row) --- */
-                <&key_physical_attrs 600  212  100 100  0  0  0>,
-                <&key_physical_attrs 700  212  100 100  0  0  0>,
-                <&key_physical_attrs 800  200  100 100  0  0  0>,
-                <&key_physical_attrs 900  212  100 100  0  0  0>,
-                <&key_physical_attrs 1000 250  100 100  0  0  0>,
+                <&key_physical_attrs    600  215  100  100    0  0  0>,
+                <&key_physical_attrs    700  215  100  100    0  0  0>,
+                <&key_physical_attrs    800  200  100  100    0  0  0>,
+                <&key_physical_attrs    900  210  100  100    0  0  0>,
+                <&key_physical_attrs   1000  230  100  100    0  0  0>,
 
-                /* --- Left Thumb Cluster --- */
-                <&key_physical_attrs 200  325  100 100  0  0  0>,
-                <&key_physical_attrs 300  335  100 100  0  0  0>,
-                <&key_physical_attrs 400  335  100 100  0  0  0>,
+                /* --- Left Thumb Cluster (엄지) --- */
+                /* 엄지를 자연스러운 아치형으로 배치 (Y좌표 조정) */
+                <&key_physical_attrs    200  330  100  100    0  0  0>, /* Tuck */
+                <&key_physical_attrs    300  345  100  100    0  0  0>, /* Home */
+                <&key_physical_attrs    400  330  100  100    0  0  0>, /* Reach */
 
                 /* --- Right Thumb Cluster --- */
-                <&key_physical_attrs 600  335  100 100  0  0  0>,
-                <&key_physical_attrs 700  335  100 100  0  0  0>,
-                <&key_physical_attrs 800  325  100 100  0  0  0>;
+                <&key_physical_attrs    600  330  100  100    0  0  0>,
+                <&key_physical_attrs    700  345  100  100    0  0  0>,
+                <&key_physical_attrs    800  330  100  100    0  0  0>;
         };
     };
 };
