--- a/boards/shields/slimkeeb/slimkeeb.dtsi
+++ b/boards/shields/slimkeeb/slimkeeb.dtsi
@@ -5,31 +5,31 @@
  */
 
 #include <dt-bindings/zmk/matrix_transform.h>
+#include <physical_layouts.dtsi>  /* <--- 이게 추가되어야 합니다! */
 
 / {
     chosen {
         zmk,physical-layout = &physical_layout0;
     };
 
-    /* ZMK Studio 물리 속성 바인딩 (7개 인자) */
-    key_physical_attrs: key_physical_attrs {
-        compatible = "zmk,key-physical-attrs";
-        #key-cells = <7>; /* x, y, w, h, rx, ry, rz */
-    };
+    /* * [삭제됨] key_physical_attrs 정의 
+     * 위에서 physical_layouts.dtsi를 include 했으므로 
+     * 더 이상 직접 정의할 필요가 없습니다.
+     */
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
         columns = <8>;
         rows = <5>;
         map = <
-            RC(0,0) RC(0,1) RC(0,2) RC(1,2) RC(0,3)   RC(0,7) RC(1,6) RC(0,6) RC(0,5) RC(0,4)
-            RC(1,0) RC(3,0) RC(3,1) RC(3,2) RC(1,3)   RC(1,7) RC(3,6) RC(3,5) RC(3,4) RC(1,4)
-            RC(2,0) RC(1,1) RC(2,1) RC(2,2) RC(2,3)   RC(2,7) RC(2,6) RC(2,5) RC(1,5) RC(2,4)
-                            RC(4,2) RC(4,1) RC(4,0)   RC(4,4) RC(4,5) RC(4,6)
+            RC(0,0) RC(0,1) RC(0,2) RC(1,2) RC(0,3)    RC(0,7) RC(1,6) RC(0,6) RC(0,5) RC(0,4)
+            RC(1,0) RC(3,0) RC(3,1) RC(3,2) RC(1,3)    RC(1,7) RC(3,6) RC(3,5) RC(3,4) RC(1,4)
+            RC(2,0) RC(1,1) RC(2,1) RC(2,2) RC(2,3)    RC(2,7) RC(2,6) RC(2,5) RC(1,5) RC(2,4)
+                            RC(4,2) RC(4,1) RC(4,0)    RC(4,4) RC(4,5) RC(4,6)
         >;
     };
 
-layouts {
+    layouts {
         compatible = "zmk,physical-layout-list";
 
         physical_layout0: physical_layout_0 {
@@ -37,68 +37,60 @@ layouts {
             display-name = "SlimPie36";
             transform = <&default_transform>;
             
-            /* * 좌표 기준 (단위: 1/100 키캡 크기, 보통 100 = 1u = 19.05mm)
-             * 중앙(Middle) 손가락을 Y=0 기준으로 잡고 스태거 적용
-             */
+            /* 여기에 우리가 아까 만든 좌표 데이터를 넣습니다 */
             keys = 
                 /* --- Left Hand (Top Row) --- */
-                /* X    Y    W    H    rx ry rz */
-                <&key_physical_attrs      0   30  100  100    0  0  0>, /* Pinky (조금 올림) */
-                <&key_physical_attrs    100   10  100  100    0  0  0>, /* Ring */
-                <&key_physical_attrs    200    0  100  100    0  0  0>, /* Middle (기준점) */
-                <&key_physical_attrs    300   15  100  100    0  0  0>, /* Index */
-                <&key_physical_attrs    400   15  100  100    0  0  0>, /* Inner */
+                /* W    H    X    Y    rx ry rz */
+                <&key_physical_attrs  100  100    0   30     0  0  0>, /* Pinky */
+                <&key_physical_attrs  100  100  100   10     0  0  0>, /* Ring */
+                <&key_physical_attrs  100  100  200    0     0  0  0>, /* Middle */
+                <&key_physical_attrs  100  100  300   15     0  0  0>, /* Index */
+                <&key_physical_attrs  100  100  400   15     0  0  0>, /* Inner */
 
                 /* --- Right Hand (Top Row) --- */
-                /* Gap: 2u (X좌표 600부터 시작, 좌우 대칭) */
-                <&key_physical_attrs    600   15  100  100    0  0  0>,
-                <&key_physical_attrs    700   15  100  100    0  0  0>,
-                <&key_physical_attrs    800    0  100  100    0  0  0>,
-                <&key_physical_attrs    900   10  100  100    0  0  0>,
-                <&key_physical_attrs   1000   30  100  100    0  0  0>,
+                <&key_physical_attrs  100  100  600   15     0  0  0>,
+                <&key_physical_attrs  100  100  700   15     0  0  0>,
+                <&key_physical_attrs  100  100  800    0     0  0  0>,
+                <&key_physical_attrs  100  100  900   10     0  0  0>,
+                <&key_physical_attrs  100  100 1000   30     0  0  0>,
 
-                /* --- Left Hand (Middle Row) - Y +100 --- */
-                <&key_physical_attrs      0  130  100  100    0  0  0>,
-                <&key_physical_attrs    100  110  100  100    0  0  0>,
-                <&key_physical_attrs    200  100  100  100    0  0  0>,
-                <&key_physical_attrs    300  115  100  100    0  0  0>,
-                <&key_physical_attrs    400  115  100  100    0  0  0>,
+                /* --- Left Hand (Middle Row) --- */
+                <&key_physical_attrs  100  100    0  130     0  0  0>,
+                <&key_physical_attrs  100  100  100  110     0  0  0>,
+                <&key_physical_attrs  100  100  200  100     0  0  0>,
+                <&key_physical_attrs  100  100  300  115     0  0  0>,
+                <&key_physical_attrs  100  100  400  115     0  0  0>,
 
                 /* --- Right Hand (Middle Row) --- */
-                <&key_physical_attrs    600  115  100  100    0  0  0>,
-                <&key_physical_attrs    700  115  100  100    0  0  0>,
-                <&key_physical_attrs    800  100  100  100    0  0  0>,
-                <&key_physical_attrs    900  110  100  100    0  0  0>,
-                <&key_physical_attrs   1000  130  100  100    0  0  0>,
+                <&key_physical_attrs  100  100  600  115     0  0  0>,
+                <&key_physical_attrs  100  100  700  115     0  0  0>,
+                <&key_physical_attrs  100  100  800  100     0  0  0>,
+                <&key_physical_attrs  100  100  900  110     0  0  0>,
+                <&key_physical_attrs  100  100 1000  130     0  0  0>,
 
-                /* --- Left Hand (Bottom Row) - Y +200 --- */
-                <&key_physical_attrs      0  230  100  100    0  0  0>,
-                <&key_physical_attrs    100  210  100  100    0  0  0>,
-                <&key_physical_attrs    200  200  100  100    0  0  0>,
-                <&key_physical_attrs    300  215  100  100    0  0  0>,
-                <&key_physical_attrs    400  215  100  100    0  0  0>,
+                /* --- Left Hand (Bottom Row) --- */
+                <&key_physical_attrs  100  100    0  230     0  0  0>,
+                <&key_physical_attrs  100  100  100  210     0  0  0>,
+                <&key_physical_attrs  100  100  200  200     0  0  0>,
+                <&key_physical_attrs  100  100  300  215     0  0  0>,
+                <&key_physical_attrs  100  100  400  215     0  0  0>,
 
                 /* --- Right Hand (Bottom Row) --- */
-                <&key_physical_attrs    600  215  100  100    0  0  0>,
-                <&key_physical_attrs    700  215  100  100    0  0  0>,
-                <&key_physical_attrs    800  200  100  100    0  0  0>,
-                <&key_physical_attrs    900  210  100  100    0  0  0>,
-                <&key_physical_attrs   1000  230  100  100    0  0  0>,
+                <&key_physical_attrs  100  100  600  215     0  0  0>,
+                <&key_physical_attrs  100  100  700  215     0  0  0>,
+                <&key_physical_attrs  100  100  800  200     0  0  0>,
+                <&key_physical_attrs  100  100  900  210     0  0  0>,
+                <&key_physical_attrs  100  100 1000  230     0  0  0>,
 
-                /* --- Left Thumb Cluster (엄지) --- */
-                /* 엄지를 자연스러운 아치형으로 배치 (Y좌표 조정) */
-                <&key_physical_attrs    200  330  100  100    0  0  0>, /* Tuck */
-                <&key_physical_attrs    300  345  100  100    0  0  0>, /* Home */
-                <&key_physical_attrs    400  330  100  100    0  0  0>, /* Reach */
+                /* --- Left Thumb --- */
+                <&key_physical_attrs  100  100  200  330     0  0  0>,
+                <&key_physical_attrs  100  100  300  345     0  0  0>,
+                <&key_physical_attrs  100  100  400  330     0  0  0>,
 
-                /* --- Right Thumb Cluster --- */
-                <&key_physical_attrs    600  330  100  100    0  0  0>,
-                <&key_physical_attrs    700  345  100  100    0  0  0>,
-                <&key_physical_attrs    800  330  100  100    0  0  0>;
+                /* --- Right Thumb --- */
+                <&key_physical_attrs  100  100  600  330     0  0  0>,
+                <&key_physical_attrs  100  100  700  345     0  0  0>,
+                <&key_physical_attrs  100  100  800  330     0  0  0>;
         };
     };
-};
-
-&uicr {
-    nfct-pins-as-gpios;
 };
