--- a/build.yaml
+++ b/build.yaml
@@ -25,7 +25,7 @@ include:
     cmake-args: -DKEYMAP_FILE=../../config/gallium36.keymap
     artifact-name: slimkeeb_left_gallium
   - board: xiao_ble
-    shield: slimkeeb_right
+    shield: slimkeeb_right rgbled_adapter
     snippet: studio-rpc-usb-uart
     cmake-args: -DKEYMAP_FILE=../../config/gallium36.keymap -DCONFIG_ZMK_STUDIO=y
     artifact-name: slimpie_right_gallium
