--- a/boards/shields/slimkeeb/slimkeeb_right.conf
+++ b/boards/shields/slimkeeb/slimkeeb_right.conf
@@ -3,3 +3,7 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_ZMK_STUDIO=y
+CONFIG_RGBLED_WIDGET=y
+CONFIG_RGBLED_WIDGET_INTERVAL_MS=250 
+CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=50
+CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
