--- a/boards/shields/slimkeeb/slimkeeb.conf
+++ b/boards/shields/slimkeeb/slimkeeb.conf
@@ -1,4 +1,6 @@
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_PM=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_STUDIO=y
