--- a/boards/shields/slimkeeb/slimkeeb_right.conf
+++ b/boards/shields/slimkeeb/slimkeeb_right.conf
@@ -1,5 +1,8 @@
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_PM_SOFT_OFF=y
+CONFIG_ZMK_PM=y
 CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_ZMK_STUDIO=y
